<resources>
    <string name="app_name">DRescue</string>

    <string name="alert_negative_button">Cancel</string>
    <string name="alert_sent">Alert sent!</string>
    <string name="alert_sent_error">Error while sending the alert. Retry later.</string>
    <string name="alerts_error">Error in loading alerts.</string>
    <string name="alerts_missing">No alerts in your district.</string>
    <string name="attention">Attention!</string>
    <string name="change_password">Change password</string>
    <string name="change_password_successful">Your password has been successfully changed</string>
    <string name="confirm_password">Confirm password</string>
    <string name="connection_not_available">Connection is not available. Please, activate it and try again.</string>
    <string name="description">Description:</string>
    <string name="description_hint">Enter a description of the event</string>
    <string name="edit">Edit</string>
    <string name="email">E-mail</string>
    <string name="email_label">Email:</string>
    <string name="empty_layout">Nothing to show.</string>
    <string name="event_name">Event name</string>
    <string name="event_type">Event type:</string>
    <string name="exclamation_point">!</string>
    <string name="fill_fields">All fields must be filled.</string>
    <string name="functionality_not_active">Functionality not active</string>
    <string name="gps_alert_message">The GPS is not active. Please, activate it from Settings->Location.</string>
    <string name="gps_alert_positive_button">Settings</string>
    <string name="gps_permission">You must give permission to GPS to use the application.</string>
    <string name="gps_unavailable">GPS coordinates are unavailable.</string>
    <string name="icon_card_view">Icon of card view.</string>
    <string name="incorrect_email_format">Incorrect email format.</string>
    <string name="incorrect_login_data">Incorrect login data.</string>
    <string name="incorrect_password_format">Incorrect password format.</string>
    <string name="incorrect_sign_up_data">Incorrect sign up data.</string>
    <string name="incorrect_upvote">You already upvote this alert.</string>
    <string name="last_alerts">Last alerts</string>
    <string name="latitude">Latitude:</string>
    <string name="location">Location</string>
    <string name="location_not_available">Location not available</string>
    <string name="login">Login</string>
    <string name="login_successful">Login successful!</string>
    <string name="longitude">Longitude:</string>
    <string name="logout">Logout</string>
    <string name="missing_account">You don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="name_label">Name:</string>
    <string name="new_alert">New alert</string>
    <string name="ok">ok</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password_mismatch">Password and confirm password do not match.</string>
    <string name="password_new">New password</string>
    <string name="password_old">Old password</string>
    <string name="password_old_not_correct">Your old password is not correct.</string>
    <string name="phone">Phone</string>
    <string name="phone_label">Phone:</string>
    <string name="profile">Profile</string>
    <string name="progress_bar_text">Please wait&#8230; Request in progress</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_exclamation">Sign up!</string>
    <string name="sign_up_successful">Sign up successful!</string>
    <string name="surname">Surname</string>
    <string name="surname_label">Surname:</string>
    <string name="timestamp">Timestamp</string>
    <string name="upvote">Upvote</string>
    <string name="upvote_content_description">Upvote this alert</string>
    <string name="upvote_message">Do you want to upvote this alert?</string>
    <string name="upvotes_number">0</string>
    <string name="upvote_sent">Upvote successful!</string>
    <string name="upvote_sent_successful">Your upvote will be visible as soon as it is processed at next refresh.
    </string>
    <string name="upvote_sent_error">Error while sending the upvote. Retry later.</string>
    <string name="your_position">Your position</string>

</resources>