<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="it.unibo.mobileuser.authentication.LoginActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            style="@style/toolbar_look">
    </include>

    <LinearLayout
            style="@style/layout_base_secondary">

        <LinearLayout
                style="@style/layout_container"
                android:layout_marginBottom="@dimen/margin_large">

            <LinearLayout
                    style="@style/layout_container_item_base">

                <com.rengwuxian.materialedittext.MaterialEditText
                        style="@style/material_edit_text_look"
                        android:id="@+id/email_login"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_account_circle_white_48dp"/>

            </LinearLayout>

            <LinearLayout
                    style="@style/layout_container_item_base">

                <com.rengwuxian.materialedittext.MaterialEditText
                        style="@style/material_edit_text_look"
                        android:id="@+id/password_login"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_vpn_key_white_48dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
                android:id="@+id/login"
                style="@style/button_look"
                android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>