<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="it.unibo.mobileuser.SplashActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            style="@style/toolbar_look">
    </include>

    <LinearLayout
            style="@style/layout_base_primary">

        <LinearLayout
                style="@style/splash_section">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/text_size_xxlarge"/>

        </LinearLayout>

        <LinearLayout
                style="@style/splash_section">

            <Button
                    android:id="@+id/splash_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:padding="@dimen/padding_xsmall"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginBottom="@dimen/margin_xsmall"
                    android:textSize="@dimen/text_size_xlarge"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_xsmall">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/missing_account"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimaryText"/>

                <TextView
                        android:id="@+id/splash_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_exclamation"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:layout_marginStart="@dimen/margin_xsmall"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/text_size_medium"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
