<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:padding="6dp">

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="12dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/type_date_layout"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="start|center_vertical">

                <TextView
                        android:id="@+id/alert_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_name"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="6dp"/>

                <TextView
                        android:id="@+id/alert_timestamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timestamp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginEnd="6dp"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/lat_long_layout"
                    android:layout_toEndOf="@id/type_date_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/alert_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginEnd="6dp"/>

                <TextView
                        android:id="@+id/alert_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginEnd="6dp"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/upvote_image_layout"
                    android:layout_toEndOf="@id/lat_long_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/upvote_icon"/>

                <TextView
                        android:id="@+id/alert_upvotes_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/upvotes_number"
                        android:ellipsize="end"
                        android:maxLines="1"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>